Modified Index and Certificate page

--- a/certifications_skills.html
+++ b/certifications_skills.html
@@ -103,54 +103,59 @@
 								<div class="inner">
 									<section class="features">
 										<article>
+											<a href="#" class="image"><img src="images/comptia.jpg" height="300"/></a>
+                                            <h3 class="major">Comptia Security+</h3>
+                                            <a href="https://drive.google.com/file/d/1Gd0uupU6EN3S4DlGRxh9QXkM9CTo4kUv/view?usp=sharing">View Certificate</a>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/ibm.jpg" height="300"/></a>
                                             <h3 class="major">IBM Security Essentials for Architects</h3>
-                                            <a href="documents/IBM_Security_Essentials_for_Architects_Badge.pdf">View Certificate</a>
+                                            <a href="https://drive.google.com/file/d/17r5j3AL9RNa0EXQpZvUTruhk_sCg5A5k/view?usp=sharing">View Certificate</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/ibmlogo.jpg" height="300"/></a>
                                             <h3 class="major">IBM Blockchain Essentials v2</h3>
-                                            <a href="documents/IBM_Blockchain_Essentials_V2_Badge.pdf">View Certificate</a>
+                                            <a href="https://drive.google.com/file/d/1BdH0c3bUG1jyV15_VftGuj8wiHqVbCy9/view?usp=sharing">View Certificate</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/eccouncil.jpg" height="300"/></a>
                                             <h3 class="major">EC Council Certified Ethical Hacker v10</h3>
-                                            <a href="documents/ECC-CEH-Certificate.pdf">View Certificate</a>
+                                            <a href="https://drive.google.com/file/d/1IBkKrDeuwzms9qXsJGalvtRHxdytoSH_/view?usp=sharing">View Certificate</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/cybrary.jpg" width="100" height="300"/></a>
 											<h3 class="major">Developing Ethical Hacking Tools using Python</h3>
-											<a href="documents/Developing Ethical Hacking Tools with Pyhton.pdf">View Certificate</a>
+											<a href="https://drive.google.com/file/d/1Psqmp3zYWf06Dweuxxe7DgDDFf8kLqR_/view?usp=sharing">View Certificate</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/cybrary.jpg" height="300" width="100"/></a>
 											<h3 class="major">End User Mobile Device Security</h3>
-											<a href="documents/End User Mobile Device Security.pdf">View Certificate</a>
+											<a href="https://drive.google.com/file/d/1Bbn3Cy1OUSxI7VfkospkaTgtB7mxDI2y/view?usp=sharing">View Certificate</a>
                                         </article>
                                         <article>
 											<a href="#" class="image"><img src="images/cybrary.jpg" height="300" width="100"/></a>
 											<h3 class="major">End User Security Awareness</h3>
-											<a href="documents/End User Security Awareness.pdf">View Certificate</a>
+											<a href="https://drive.google.com/file/d/1ygdiiQBbKUW9mDx7GAH_BFnSXj9kkSyn/view?usp=sharing">View Certificate</a>
                                         </article>
                                         <article>
 											<a href="#" class="image"><img src="images/cybrary.jpg" height="300" width="100"/></a>
 											<h3 class="major">Payment Card Industry: Data Security Standard</h3>
-											<a href="documents/PCI DSS.pdf">View Certificate</a>
+											<a href="https://drive.google.com/file/d/1zRVaidRO-7dUqaOIYwBaqW65jK9B_q1b/view?usp=sharing">View Certificate</a>
                                         </article>
                                         <article>
 											<a href="#" class="image"><img src="images/cybrary.jpg" height="300" width="100"/></a>
 											<h3 class="major">Penetration Testing and Ethical Hacking</h3>
-											<a href="documents/Pentest and Ethical Hacking.pdf">View Certificate</a>
+											<a href="https://drive.google.com/file/d/1CH9TbloeAsoqaYDX6GmAmNMaeAtZhLqh/view?usp=sharing">View Certificate</a>
                                         </article>
                                         <article>
 											<a href="#" class="image"><img src="images/cybrary.jpg" height="300" width="100"/></a>
 											<h3 class="major">Social Engineering</h3>
-											<a href="documents/Social Engineering.pdf">View Certificate</a>
+											<a href="https://drive.google.com/file/d/1Vv6vAa4UCmk-ssHiaVYiq0fLLmgXSehY/view?usp=sharing">View Certificate</a>
                                         </article>
                                         <article>
 											<a href="#" class="image"><img src="images/lucideus.jpg" height="300" width="100"/></a>
 											<h3 class="major">Lucideus Certified Cyber Security Expert</h3>
-											<a href="documents/LCCSE7635.png">View Certificate</a>
+											<a href="https://drive.google.com/file/d/1h3TRbAPyc-AD96OER_4BS5pk5gzhC9Py/view?usp=sharing">View Certificate</a>
 										</article>
 										<a href="#menu" class="button primary" style="margin:0;position:absolute;top:98.8%;left:50%;-ms-transform: translate(-50%,-50%); transform: translate(-50%,-50%);">Learn more about me >></a>
 									</section>
