--- a/index.html
+++ b/index.html
@@ -48,38 +48,38 @@
 								<article>
 									<a href="#" class="image"><img src="images/ibm.jpg"/></a>
 									<h3 class="major">Data & Application Security Intern</h3>
-									<p id="description">At present working in this role. In this role, I have to perform vulnerability assessment and penetration testing on web applications to find vulnerabilities which can cause business logic errors. Apart from that, I also work on exploit development for various applications. I also work on automation of penetration testing.</p>
-									<!-- <a href="documents/Internship Certificates_SysTools.jpg" class="special">Certificate of Appreciation</a> -->
+									<p id="description">Worked in multiple projects which dealt with performing penetration testing of web applications, exploit development using ROP Chain technique and Egg Hunters and developing automation framework for manual penetration testing of web applications.</p>
+									<a href="https://drive.google.com/file/d/1pDgGPp6WAuYBlfVMeaW_lCA8tsC8TaxL/view?usp=sharing" class="special">Certificate of Appreciation</a>
 								</article>
 								<article>
 									<a href="#" class="image"><img src="images/systools.jpg"/></a>
 									<h3 class="major">Digital Evidence Examiner Trainee</h3>
 									<p id="description">Worked with Income Tax department to help acquire digital evidence using different software utilities from raid sites and analyze them. Assisted my team in completing documentations on Digital Forensics for NCRB officials.</p>
-									<a href="documents/Internship Certificates_SysTools.jpg" class="special">Certificate of Appreciation</a>
+									<a href="https://drive.google.com/file/d/1gJ8gn_1UMKpEoRsgGGvO0DkW7eqBgbKX/view?usp=sharing" class="special">Certificate of Appreciation</a>
 								</article>
 								<article>
 									<a href="#" class="image"><img src="images/astra.jpg" width="500" height="340"/></a>
 									<h3 class="major">Technical Content Writer</h3>
 									<p id="description">Authored articles describing different types of web application vulnerabilities present in various CMS platforms and how they can impact business logic and continuity.</p>
-									<a href="documents/Astra Security Internship.pdf" class="special">Certificate of Appreciation</a>
+									<a href="https://drive.google.com/file/d/1vo-uG16ZUMwfaIWSdPMv6Pa4vwqlwkK4/view?usp=sharing" class="special">Certificate of Appreciation</a>
 								</article>
 								<article>
 									<a href="#" class="image"><img src="images/nic.jpg" height="340"/></a>
 									<h3 class="major">Software Engineering Intern</h3>
 									<p id="description">Helped the company to transform to a paperless system which would register and monitor users over the company's wireless network by developing a web application.</p>
-									<a href="documents/NIC Internship Certificate.pdf" class="special">Certificate of Appreciation</a>
+									<a href="https://drive.google.com/file/d/1fQIWJHRFQIVtoWfEoKiRwukVqCS1Id_b/view?usp=sharing" class="special">Certificate of Appreciation</a>
 								</article>
 								<article>
 									<a href="#" class="image"><img src="images/peerxp.jpg" width="500" height="430"/></a>
 									<h3 class="major">Graphic Designing Intern</h3>
 									<p id="description">Learned how to make eye-catching posters which enhanced my knowledge about how people are attracted to click-baits or phishing tools available online.</p>
-									<a href="documents/PeerXP Internship.pdf" class="special">Certificate of Appreciation</a>
+									<a href="https://drive.google.com/file/d/1GBLM23cebM-iW0DxhkVMehKEADvAAgI6/view?usp=sharing" class="special">Certificate of Appreciation</a>
 								</article>
 								<article>
 									<a href="#" class="image"><img src="images/shamoor.jpg" width="500" height="430"/></a>
 									<h3 class="major">Content Writing Intern</h3>
 									<p id="description">Authored content material to connect to the minds of netizens and understand how influencing content is created in social engineering attacks or hacktivism.</p>
-									<a href="documents/Shamoor Internship.pdf" class="special">Certificate of Appreciation</a>
+									<a href="https://drive.google.com/file/d/1-5ZvXDxnWN6-PjxRThORMATuj5zXbq0b/view?usp=sharing" class="special">Certificate of Appreciation</a>
 								</article>
 								<a href="#menu" class="button primary" style="margin:0;position:absolute;top:98.8%;left:50%;-ms-transform: translate(-50%,-50%); transform: translate(-50%,-50%);">Learn more about me >></a>
 							</section>
