--- a/education.html
+++ b/education.html
@@ -14,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Sourish Das | Education & Position of Responsibilites </a></h1>
+						<h1><a href="index.html">Sourish Das | Education & Position of Responsibilities </a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -26,7 +26,7 @@
 						<h2>Menu</h2>
 						<ul class="links">
 							<li><a href="index.html">Homepage</a></li>
-							<li><a href="#">Education and Position of Responsibilites</a></li>
+							<li><a href="#">Education and Position of Responsibilities</a></li>
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="certifications_skills.html">Skills and Certifications</a></li>
 							<li><a href="volunteer.html">Volunteer Work</a></li>
