--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<div class="inner">
 					<div class="logo"><span class="icon fa-gem"></span></div>
 						<h2>I am Sourish Das</h2>
-						<p>A cyber security enthusiast with a desire to work in a challenging and boundless environment with steadfast progress in learning</p>
+						<p align="justify">A cyber security professional at IBM with 1.5 years of working experience in Data and Application Security in Hybrid Cloud and Cognitive Software Products. I have progressive knowledge about different tools and techniques associated with SAST and DAST. I am a steadfast learner and passionate about learning contemporary technologies in the industry.</p>
 					</div>
 				</section>
 
