--- a/projects.html
+++ b/projects.html
@@ -49,6 +49,11 @@
 								<div class="inner">
 									<section class="features">
 										<article>
+											<a href="#" class="image"><img src="images/grpc.png" height="300"/></a>
+											<h3 class="major">gRPC Vulnerable CRUD Application</h3>
+											<p id="description">This was a project done to understand the working of gRPC. I crafted this application in Java and injected certain vulnerabilities into it which can be exploited to enhance my team's DAST skills.</p>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/access.jpg" height="300"/></a>
 											<h3 class="major">E-Authentication Using QR Code and OTP</h3>
 											<p id="description">This was my final year Capstone project. In this, we developed an authentication system which uses dynamicallly generated QR Code or OTP for user authentication. We used Django as our development platform since we wanted to expand our knowledge in this platform.</p>
