--- a/certifications_skills.html
+++ b/certifications_skills.html
@@ -49,41 +49,49 @@
                                 <section class="features">
                                     <div class="row">
                                         <div class="col-6 col-12-medium">
-                                            <ul class="actions">
-                                                <li><a href="#" class="button primary">C/C++</a></li>
-                                                <li><a href="#" class="button primary">Java</a></li>
-                                                <li><a href="#" class="button primary">Python 2 and 3</a></li>
-                                                <li><a href="#" class="button primary">Nmap</a></li>
-                                                <li><a href="#" class="button primary">Burpsuite</a></li>
-                                                <li><a href="#" class="button primary">Wifi Hacking</a></li>
-                                            </ul>
-                                            <ul class="actions">
-                                                <li><a href="#" class="button primary">Mobiledit Forensics Expert</a></li>
-                                                <li><a href="#" class="button primary">AccessData FTK Imager</a></li>
-                                                <li><a href="#" class="button primary">Metasploit</a></li>
-                                                <li><a href="#" class="button primary">Kali Linux</a></li>    
-                                            </ul>
-                                            <ul class="actions">
-                                                <li><a href="#" class="button primary">DVWA</a></li>
-                                                <li><a href="#" class="button primary">Mutillidae</a></li>
-                                                <li><a href="#" class="button primary">BWAPP</a></li>
-                                                <li><a href="#" class="button primary">XSS</a></li>
-                                                <li><a href="#" class="button primary">SQL Injection</a></li>
-                                                <li><a href="#" class="button primary">Dirb</a></li>
-                                                <li><a href="#" class="button primary">Nikto</a></li>
-                                            </ul>
-                                            <ul class="actions">
-                                                <li><a href="#" class="button primary">Egg Hunter Technique</a></li>
-                                                <li><a href="#" class="button primary">Buffer Overflow</a></li>
-                                                <li><a href="#" class="button primary">Exploit Development</a></li>
-                                                <li><a href="#" class="button primary">Python Automation</a></li>
-                                            </ul>
-                                            <ul class="actions">
-                                                <li><a href="#" class="button primary">Vulnerability Assessment</a></li>
-                                                <li><a href="#" class="button primary">Penetration Testing</a></li>
-                                                <li><a href="#" class="button primary">Leadership</a></li>
-                                                <li><a href="#" class="button primary">Team work</a></li>
-                                            </ul>
+                                        	<ul class="actions">
+                                                	<li><a href="#" class="button primary">DVWA</a></li>
+							<li><a href="#" class="button primary">Mutillidae</a></li>
+							<li><a href="#" class="button primary">BWAPP</a></li>
+							<li><a href="#" class="button primary">XSS</a></li>
+							<li><a href="#" class="button primary">SQL Injection</a></li>
+							<li><a href="#" class="button primary">Dirb</a></li>
+							<li><a href="#" class="button primary">Nikto</a></li>
+                                            	</ul>
+						<ul class="actions">
+							<li><a href="#" class="button primary">GRPC</a></li>
+							<li><a href="#" class="button primary">BloomRPC</a></li>
+							<li><a href="#" class="button primary">gRPC Curl</a></li>
+							<li><a href="#" class="button primary">GRPC UI</a></li>
+							<li><a href="#" class="button primary">Burpsuite Pro</a></li>
+							<li><a href="#" class="button primary">OWASP Top 10</a></li>
+						</ul>
+						<ul class="actions">
+							<li><a href="#" class="button primary">SANS Top 25</a></li>
+                                                	<li><a href="#" class="button primary">C/C++</a></li>
+							<li><a href="#" class="button primary">Java</a></li>
+							<li><a href="#" class="button primary">Python 2 and 3</a></li>
+							<li><a href="#" class="button primary">Nmap</a></li>                                
+							<li><a href="#" class="button primary">Wifi Hacking</a></li>
+                                            	</ul>
+						<ul class="actions">
+							<li><a href="#" class="button primary">Mobiledit Forensics Expert</a></li>
+							<li><a href="#" class="button primary">AccessData FTK Imager</a></li>
+							<li><a href="#" class="button primary">Metasploit</a></li>
+							<li><a href="#" class="button primary">Kali Linux</a></li>    
+						</ul>
+						<ul class="actions">
+							<li><a href="#" class="button primary">Egg Hunter Technique</a></li>
+							<li><a href="#" class="button primary">Buffer Overflow</a></li>
+							<li><a href="#" class="button primary">Exploit Development</a></li>
+							<li><a href="#" class="button primary">Python Automation</a></li>
+						</ul>
+						<ul class="actions">
+							<li><a href="#" class="button primary">Vulnerability Assessment</a></li>
+							<li><a href="#" class="button primary">Penetration Testing</a></li>
+							<li><a href="#" class="button primary">Leadership</a></li>
+							<li><a href="#" class="button primary">Team work</a></li>
+						</ul>
                                         </div>
                                     </div>
                                 </section>
