Major changes in Certifications and Skills

--- a/certifications_skills.html
+++ b/certifications_skills.html
@@ -102,7 +102,7 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Certifications</h2>
+								<h2>Certifications and Badges</h2>
 							</div>
 						</header>
 
@@ -111,57 +111,102 @@
 								<div class="inner">
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/comptia.jpg" height="300"/></a>
+											<a href="#" class="image"><img src="images/ibm-consulting-communicating-value.png" height="400"/></a>
+                                            <h3 class="major">IBM Consulting - Communicating Value</h3>
+                                            <a href="https://www.credly.com/badges/cf69a612-a2c3-44bf-88f9-f814e8a5e6dc/public_url">View Badge on Credly</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/ibm-consulting-delivering-business-value.png" height="400"/></a>
+                                            <h3 class="major">IBM Consulting - Delivering Business Value</h3>
+                                            <a href="https://www.credly.com/badges/efe3d9eb-3b4f-49b0-b61e-51efb90f42c7/public_url">View Badge on Credly</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/cognitive-practitioner.png" height="400"/></a>
+                                            <h3 class="major">Cognitive Practitioner</h3>
+                                            <a href="https://www.credly.com/badges/066fed90-f386-4d81-8112-1c3d6588280e/public_url">View Badge on Credly</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/ibm-garage-method-for-cloud-advocate.png" height="400"/></a>
+                                            <h3 class="major">IBM Garage Method for Cloud Advocate</h3>
+                                            <a href="https://www.credly.com/badges/33966f61-8c3d-4d30-867b-599a332e8f4e/public_url">View Badge on Credly</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/think-like-a-hacker.png" height="400"/></a>
+                                            <h3 class="major">Think Like A Hacker</h3>
+                                            <a href="https://www.credly.com/badges/4441c4a3-ec8e-4fe2-9c52-d03c5addec44/public_url">View Badge on Credly</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/ibm-security-bootcamp.png" height="400"/></a>
+                                            <h3 class="major">IBM Security Bootcamp</h3>
+                                            <a href="https://www.credly.com/badges/8417286b-888e-4902-b308-e3e401e63625/public_url">View Badge on Credly</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/ibm-virtual-collaborator.png" height="400"/></a>
+                                            <h3 class="major">IBM Virtual Collaborator</h3>
+                                            <a href="https://www.credly.com/badges/f0bb1630-c111-4862-8a39-0c16fae79b9c/public_url">View Badge on Credly</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/the-ibm-way.png" height="400"/></a>
+                                            <h3 class="major">The IBM Way</h3>
+                                            <a href="https://www.credly.com/badges/db41876d-9847-464b-b3cf-6dd52dfa0df9/public_url">View Badge on Credly</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/enterprise-design-thinking-practitioner.png" height="400"/></a>
+                                            <h3 class="major">Enterprise Design Thinking Practitioner</h3>
+                                            <a href="https://www.credly.com/badges/fb6cc49d-4bab-425e-8cd5-fe1aa51a095a/public_url">View Badge on Credly</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/comptia.jpg" height="400"/></a>
                                             <h3 class="major">Comptia Security+</h3>
-                                            <a href="https://drive.google.com/file/d/1Gd0uupU6EN3S4DlGRxh9QXkM9CTo4kUv/view?usp=sharing">View Certificate</a>
+                                            <a href="https://www.credly.com/badges/d9d34b6c-b0cf-4a7b-845a-008284cc97bc/public_url">View Badge on Credly</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/ibm.jpg" height="300"/></a>
+											<a href="#" class="image"><img src="images/ibm-security-essentials-for-architects.png" height="400"/></a>
                                             <h3 class="major">IBM Security Essentials for Architects</h3>
-                                            <a href="https://drive.google.com/file/d/17r5j3AL9RNa0EXQpZvUTruhk_sCg5A5k/view?usp=sharing">View Certificate</a>
+                                            <a href="https://www.credly.com/badges/753cd482-6f17-481d-a6d1-82450d90c8fc/public_url">View Badge on Credly</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/ibmlogo.jpg" height="300"/></a>
+											<a href="#" class="image"><img src="images/ibm-blockchain-essentials-v2.png" height="400"/></a>
                                             <h3 class="major">IBM Blockchain Essentials v2</h3>
-                                            <a href="https://drive.google.com/file/d/1BdH0c3bUG1jyV15_VftGuj8wiHqVbCy9/view?usp=sharing">View Certificate</a>
+                                            <a href="https://www.credly.com/badges/a0e7d8ed-182d-45a5-889d-efb798b8306c/public_url">View Badge on Credly</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/eccouncil.jpg" height="300"/></a>
+											<a href="#" class="image"><img src="images/eccouncil.jpg" height="400"/></a>
                                             <h3 class="major">EC Council Certified Ethical Hacker v10</h3>
                                             <a href="https://drive.google.com/file/d/1IBkKrDeuwzms9qXsJGalvtRHxdytoSH_/view?usp=sharing">View Certificate</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/cybrary.jpg" width="100" height="300"/></a>
+											<a href="#" class="image"><img src="images/cybrary.jpg" width="100" height="400"/></a>
 											<h3 class="major">Developing Ethical Hacking Tools using Python</h3>
 											<a href="https://drive.google.com/file/d/1Psqmp3zYWf06Dweuxxe7DgDDFf8kLqR_/view?usp=sharing">View Certificate</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/cybrary.jpg" height="300" width="100"/></a>
+											<a href="#" class="image"><img src="images/cybrary.jpg" height="400" width="100"/></a>
 											<h3 class="major">End User Mobile Device Security</h3>
 											<a href="https://drive.google.com/file/d/1Bbn3Cy1OUSxI7VfkospkaTgtB7mxDI2y/view?usp=sharing">View Certificate</a>
                                         </article>
                                         <article>
-											<a href="#" class="image"><img src="images/cybrary.jpg" height="300" width="100"/></a>
+											<a href="#" class="image"><img src="images/cybrary.jpg" height="400" width="100"/></a>
 											<h3 class="major">End User Security Awareness</h3>
 											<a href="https://drive.google.com/file/d/1ygdiiQBbKUW9mDx7GAH_BFnSXj9kkSyn/view?usp=sharing">View Certificate</a>
                                         </article>
                                         <article>
-											<a href="#" class="image"><img src="images/cybrary.jpg" height="300" width="100"/></a>
+											<a href="#" class="image"><img src="images/cybrary.jpg" height="400" width="100"/></a>
 											<h3 class="major">Payment Card Industry: Data Security Standard</h3>
 											<a href="https://drive.google.com/file/d/1zRVaidRO-7dUqaOIYwBaqW65jK9B_q1b/view?usp=sharing">View Certificate</a>
                                         </article>
                                         <article>
-											<a href="#" class="image"><img src="images/cybrary.jpg" height="300" width="100"/></a>
+											<a href="#" class="image"><img src="images/cybrary.jpg" height="400" width="100"/></a>
 											<h3 class="major">Penetration Testing and Ethical Hacking</h3>
 											<a href="https://drive.google.com/file/d/1CH9TbloeAsoqaYDX6GmAmNMaeAtZhLqh/view?usp=sharing">View Certificate</a>
                                         </article>
                                         <article>
-											<a href="#" class="image"><img src="images/cybrary.jpg" height="300" width="100"/></a>
+											<a href="#" class="image"><img src="images/cybrary.jpg" height="400" width="100"/></a>
 											<h3 class="major">Social Engineering</h3>
 											<a href="https://drive.google.com/file/d/1Vv6vAa4UCmk-ssHiaVYiq0fLLmgXSehY/view?usp=sharing">View Certificate</a>
                                         </article>
                                         <article>
-											<a href="#" class="image"><img src="images/lucideus.jpg" height="300" width="100"/></a>
+											<a href="#" class="image"><img src="images/lucideus.jpg" height="400" width="100"/></a>
 											<h3 class="major">Lucideus Certified Cyber Security Expert</h3>
 											<a href="https://drive.google.com/file/d/1h3TRbAPyc-AD96OER_4BS5pk5gzhC9Py/view?usp=sharing">View Certificate</a>
 										</article>
