--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<div class="inner">
 					<div class="logo"><span class="icon fa-gem"></span></div>
 						<h2>I am Sourish Das</h2>
-						<p align="justify">A cyber security professional at IBM with 1.5 years of working experience in Data and Application Security in Hybrid Cloud and Cognitive Software Products. I have progressive knowledge about different tools and techniques associated with SAST and DAST. I am a steadfast learner and passionate about learning contemporary technologies in the industry.</p>
+						<p align="justify">A cyber security professional at IBM with 1.5 years of working experience in Data and Application Security in Cloud and Cognitive Software. I have progressive knowledge about different tools and techniques associated with SAST and DAST. I am a steadfast learner and passionate about learning contemporary technologies in the industry.</p>
 					</div>
 				</section>
 
@@ -46,25 +46,31 @@
 							<p>Here are some of the roles in which I have worked till date</p>
 							<section class="features">
 								<article>
+									<a href="#" class="image"><img src="images/ibmlogo_2.jpg"/></a>
+									<h3 class="major">Associate Consultant - Data & Application Security</h3>
+									<p id="description">Utilising the techniques of DAST and SAST, I perform penetration testing and exploitation on web applications and API endpoints. I assist client teams in the Sec part of DevSecOps cycle by helping them understand the vulnerabilities present in the application/endpoint and suggesting customised fixes as per product’s functionality and use-cases it covers.By following Agile methodology, it enables me in quick monitoring of reporting and patching of the vulnerabilities, keeping the product compliant with various global data regulation policies and achieving client satisfaction as well. </p>
+									<a href="https://drive.google.com/file/d/1zIUCwaD3jOPCC7KvhK0wSmSDxHlCKL4w/view?usp=sharing" class="special">Recognition Received</a>
+								</article>
+								<article>
 									<a href="#" class="image"><img src="images/ibm.jpg"/></a>
 									<h3 class="major">Data & Application Security Intern</h3>
-									<p id="description">Worked in multiple projects which dealt with performing penetration testing of web applications, exploit development using ROP Chain technique and Egg Hunters and developing automation framework for manual penetration testing of web applications.</p>
+									<p id="description">As an intern, worked in multiple projects which dealt with performing penetration testing of web applications, exploit development using ROP Chain technique and Egg Hunters and developing automation framework for manual penetration testing of web applications.</p>
 									<a href="https://drive.google.com/file/d/1pDgGPp6WAuYBlfVMeaW_lCA8tsC8TaxL/view?usp=sharing" class="special">Certificate of Appreciation</a>
 								</article>
 								<article>
-									<a href="#" class="image"><img src="images/systools.jpg"/></a>
+									<a href="#" class="image"><img src="images/systools.jpg" height="400"/></a>
 									<h3 class="major">Digital Evidence Examiner Trainee</h3>
 									<p id="description">Worked with Income Tax department to help acquire digital evidence using different software utilities from raid sites and analyze them. Assisted my team in completing documentations on Digital Forensics for NCRB officials.</p>
 									<a href="https://drive.google.com/file/d/1gJ8gn_1UMKpEoRsgGGvO0DkW7eqBgbKX/view?usp=sharing" class="special">Certificate of Appreciation</a>
 								</article>
 								<article>
-									<a href="#" class="image"><img src="images/astra.jpg" width="500" height="340"/></a>
+									<a href="#" class="image"><img src="images/astra.jpg" height="400" width="500"/></a>
 									<h3 class="major">Technical Content Writer</h3>
 									<p id="description">Authored articles describing different types of web application vulnerabilities present in various CMS platforms and how they can impact business logic and continuity.</p>
 									<a href="https://drive.google.com/file/d/1vo-uG16ZUMwfaIWSdPMv6Pa4vwqlwkK4/view?usp=sharing" class="special">Certificate of Appreciation</a>
 								</article>
 								<article>
-									<a href="#" class="image"><img src="images/nic.jpg" height="340"/></a>
+									<a href="#" class="image"><img src="images/nic.jpg" height="430"/></a>
 									<h3 class="major">Software Engineering Intern</h3>
 									<p id="description">Helped the company to transform to a paperless system which would register and monitor users over the company's wireless network by developing a web application.</p>
 									<a href="https://drive.google.com/file/d/1fQIWJHRFQIVtoWfEoKiRwukVqCS1Id_b/view?usp=sharing" class="special">Certificate of Appreciation</a>
