Updated resume and some content

--- a/certifications_skills.html
+++ b/certifications_skills.html
@@ -225,7 +225,7 @@
 							<li class="icon solid fa-envelope"><a href="mailto:sourishd21@gmail.com">sourishd821@gmail.com</a></li>
 							<li class="icon brands fa-github"><a href="https://www.github.com/sdas-ghub98">Github Profile</a></li>
 							<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/sclandestined">LinkedIn Profile</a></li>
-							<li class="icon solid fa-download"><a href="CV 2021.pdf">Download my resume</a></li>
+							<li class="icon solid fa-download"><a href="Resume 2022.pdf">Download my resume</a></li>
 					</div>
 				</section>
 
