--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<div class="inner">
 					<div class="logo"><span class="icon fa-gem"></span></div>
 						<h2>I am Sourish Das</h2>
-						<p align="justify">A cyber security professional at IBM with 1.5 years of working experience in Data and Application Security in Cloud and Cognitive Software. I have progressive knowledge about different tools and techniques associated with SAST and DAST. I am a steadfast learner and passionate about learning contemporary technologies in the industry.</p>
+						<p align="justify">A cyber security professional at IBM with 2 years of experience in Data and Application Security domain. I have knowledge about various tools and technologies associated with SAST and DAST. I am a steadfast learner and passionate about learning contemporary technologies in the industry.</p>
 					</div>
 				</section>
 
@@ -48,8 +48,7 @@
 								<article>
 									<a href="#" class="image"><img src="images/ibmlogo_2.jpg"/></a>
 									<h3 class="major">Associate Consultant - Data & Application Security</h3>
-									<p id="description">Utilising the techniques of DAST and SAST, I perform penetration testing and exploitation on web applications and API endpoints. I assist client teams in the Sec part of DevSecOps cycle by helping them understand the vulnerabilities present in the application/endpoint and suggesting customised fixes as per product’s functionality and use-cases it covers.By following Agile methodology, it enables me in quick monitoring of reporting and patching of the vulnerabilities, keeping the product compliant with various global data regulation policies and achieving client satisfaction as well. </p>
-									<a href="https://drive.google.com/file/d/1zIUCwaD3jOPCC7KvhK0wSmSDxHlCKL4w/view?usp=sharing" class="special">Recognition Received</a>
+									<p id="description">Utilising the techniques of DAST and SAST, I perform penetration testing and exploitation on web applications and API endpoints. I assist client teams in the Sec part of DevSecOps cycle by helping them understand the vulnerabilities present in the application/endpoint and suggesting customised fixes as per product's functionality and use-cases it covers.By following Agile methodology, it enables me in quick monitoring of reporting and patching of the vulnerabilities, keeping the product compliant with various global data regulation policies and achieving client satisfaction as well. </p>
 								</article>
 								<article>
 									<a href="#" class="image"><img src="images/ibm.jpg"/></a>
@@ -103,7 +102,7 @@
 								<li class="icon solid fa-envelope"><a href="mailto:sourishd21@gmail.com">sourishd821@gmail.com</a></li>
 								<li class="icon brands fa-github"><a href="https://www.github.com/sdas-ghub98">Github Profile</a></li>
 								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/sclandestined">LinkedIn Profile</a></li>
-								<li class="icon solid fa-download"><a href="CV 2021.pdf">Download my resume</a></li>
+								<li class="icon solid fa-download"><a href="Resume 2022.pdf">Download my resume</a></li>
 						</div>
 					</section>
 
