Minor content changes

--- a/certifications_skills.html
+++ b/certifications_skills.html
@@ -111,6 +111,16 @@
 								<div class="inner">
 									<section class="features">
 										<article>
+											<a href="#" class="image"><img src="images/security-and-privacy-by-design-foundations.png" height="400"/></a>
+                                            <h3 class="major">Security & Privacy by Design</h3>
+                                            <a href="https://www.credly.com/badges/202bda35-5e3b-4fe6-83be-417beeba41f0/public_url">View Badge on Credly</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/ibm-certified-advocate-cloud-v1.6.png" height="400"/></a>
+                                            <h3 class="major">IBM Cloud Advocate v1</h3>
+                                            <a href="https://www.credly.com/badges/aeeca380-1d63-473f-b2be-e67870956936/public_url">View Badge on Credly</a>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/ibm-consulting-communicating-value.png" height="400"/></a>
                                             <h3 class="major">IBM Consulting - Communicating Value</h3>
                                             <a href="https://www.credly.com/badges/cf69a612-a2c3-44bf-88f9-f814e8a5e6dc/public_url">View Badge on Credly</a>
