--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/grpc.png" height="300"/></a>
 											<h3 class="major">gRPC Vulnerable CRUD Application</h3>
-											<p id="description">This was a project done to understand the working of gRPC. I crafted this application in Java and injected certain vulnerabilities into it which can be exploited to enhance my team's DAST skills.</p>
+											<p id="description">This was a project done to understand the working of gRPC. I developed a vulnerable application with some gRPC specific vulnerabilities that can be exploited to enhance my team's DAST skills.</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/access.jpg" height="300"/></a>
@@ -62,7 +62,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/cybercrime.jpg"/></a>
 											<h3 class="major">Cybercrime: How To Deal With It</h3>
-											<p id="description">This was a research and development project in my 6th Semester. In this project, we tried to analyze the different socio-economic reasons that lead to commiting of cybercrimes across the globe. We studied various factors, conducted a survey and proposed some solutions to the panel.</p>
+											<p id="description">This was a research and development project in my 6th Semester. In this project, we tried to analyze the different factors that lead to commiting of cybercrimes across the globe. We also conducted a survey and proposed some solutions to the panel.</p>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/imgprocess.jpg"/></a>
